estilos y estructuras definitivas

--- a/tipss.html
+++ b/tipss.html
@@ -5,13 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Institución médica dedicada a la atención y prevención de la salud en Cardiología, Cirugía, Endocrinología, Ginecología, Nutrición y Psicología">
-  <meta name="keywords" content="Salud, Medicina, Consultorio, Cardiología, Ginecología, Endocrinología, Psicología, Nutrición, Cirugía">
+  <meta name="description"content="Institución médica dedicada a la atención y prevención de la salud en Cardiología, Cirugía, Endocrinología, Ginecología, Nutrición y Psicología">
+  <meta name="keywords"content="Salud, Medicina, Consultorio, Cardiología, Ginecología, Endocrinología, Psicología, Nutrición, Cirugía">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="scss/estilos.css">
-  <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cabin+Condensed&family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap"rel="stylesheet">
   <link rel="shortcut icon" href="./assets/Logo- sin fondo-IMA-01.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -26,8 +25,10 @@
       <div class="row">
         <nav class="header__nav navbar navbar-expand-lg navbar-light bg-transparent ">
           <div class="container-fluid">
-            <img src="./assets/Logo- sin fondo-IMA-01.png" alt="logoima" loading="lazy"
-              class="header__nav__logo d-inline-block align-text-top">
+            <a class="navbar-brand" href="index.html">
+              <img src="./assets/logoheader.png" alt="logoima" loading="lazy"
+                class="header__nav__logo d-inline-block align-text-top">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -58,54 +59,59 @@
       </div>
       <!--encabezado del header-->
       <div class="row text-center">
-        <h1 id="header__h1" class="animate__animated animate__slideInLeft animate__delay-0.75s">"Te acercamos nuestros
-          Tips Saludables"</h1>
+        <h1 id="header__h1" class="animate__animated animate__slideInLeft animate__delay-0.75s">Te acercamos nuestros
+          Tips Saludables</h1>
       </div>
     </div>
     </div>
   </header>
   <!--inicio cuerpo principal-->
   <main class="container-fluid"></main>
-  <div class="row row-cols-2 row-cols-md-2 row-cols-sm-2 g-6 p-2">
-    <div class="col">
+  <div class="row row-cols-2  g-6 p-2">
+    <div class="col-md-4 col-sm-6 col-l-4">
       <div class="embed-responsive embed-responsive-16by9 row align-item-center ">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wwvGGG-hESw" loading="lazy" allowfullscreen ></iframe>
-        <p class="text-center">RECOMENDACIONES COVID</p>
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wwvGGG-hESw" loading="lazy"
+          allowfullscreen></iframe>
+        <p id="pr" class="text-center">RECOMENDACIONES COVID</p>
       </div>
     </div>
-    <div class="col">
+    <div class="col-md-4 col-sm-6 col-l-4">
       <div class="embed-responsive embed-responsive-16by9 row align-item-center">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9IlntOcSxs8" loading="lazy" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9IlntOcSxs8" loading="lazy"
+          allowfullscreen></iframe>
         <p class="text-center">ALIMENTACIÓN SANA</p>
       </div>
     </div>
-    <div class="col">
-      <div class="embed-responsive embed-responsive-16by9 row align-item-center ">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/yC_1lzlqGdw" loading="lazy" allowfullscreen></iframe>
+    <div class="col-md-4 col-sm-6 col-l-4">
+      <div class="embed-responsive embed-responsive-16by9 row align-item-center">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/yC_1lzlqGdw" loading="lazy"
+          allowfullscreen></iframe>
         <p class="text-center">CONTROLES GINECOLÓGICOS</p>
       </div>
     </div>
-    <div class="col">
+    <div class="col-md-4 col-sm-6 col-l-4">
       <div class="embed-responsive embed-responsive-16by9 row align-item-center">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ZfIDjqy7ZLE" loading="lazy" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ZfIDjqy7ZLE" loading="lazy"
+          allowfullscreen></iframe>
         <p class="text-center">DEPORTE Y SALUD</p>
       </div>
     </div>
-    <div class="col">
+    <div class="col-md-4 col-sm-6 col-l-4">
       <div class="embed-responsive embed-responsive-16by9 row align-item-center ">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/c9UUtbnuoJg" loading="lazy" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/c9UUtbnuoJg" loading="lazy"
+          allowfullscreen></iframe>
         <p class="text-center">¿QUÉ ES EL STRESS? </p>
       </div>
     </div>
-    <div class="col">
+    <div class="col-md-4 col-sm-6 col-l-4">
       <div class="embed-responsive embed-responsive-16by9 row align-item-center">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1_yF759B7Dg" loading="lazy" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1_yF759B7Dg" loading="lazy"
+          allowfullscreen></iframe>
         <p class="text-center">DIABETES</p>
       </div>
     </div>
   </div>
   </main>
-
   <!-- Footer -->
   <footer class="footer bg-transparent text-center">
     <!--mapa del footer-->
@@ -120,18 +126,20 @@
         <h6 class="text-uppercase fw-bold mb-4 mr-xl-6">
           Contacto
         </h6>
-        <p> Calle 20 N°Colón (Bs.As)</p>
-        <p>Horario:L A V 08:00 a 20:00</p>
+        <p> Calle 20 N° 605 - Colón (Bs.As)</p>
+        <p>Horario:L A V 9 a 12hs - 16 a 20hs</p>
+        <p>TURNOS:2473430185</p>
         <p>institutomedicoasistencial@gmail.com</p>
-        <p>TURNOS:2473409030</p>
       </div>
       <!--redes sociales-->
       <div class="row">
         <ul class="redessociales">
-          <li><a href=https://api.whatsapp.com/send?phone=542473409030" target="_blank"> <img
-                src="./assets/logowhatsapp.png" alt="logo de whatsapp" class="redessociales__imagenes" loading="lazy"></a></li>
+          <li><a href=https://api.whatsapp.com/send?phone=542473409030&text=Hola,%20¿En%20qué%20podemos%20ayudarlo?
+              target="_blank"> <img src="./assets/logowhatsapp.png" alt="logo de whatsapp"
+                class="redessociales__imagenes" loading="lazy"></a></li>
           <li><a href="mailto:institutomedicoasistencial@gmail.com" target="_blank"> <img
-                src="./assets/envelopemail.png" alt="logo mail " class="redessociales__imagenes" loading="lazy"></a></li>
+                src="./assets/envelopemail.png" alt="logo mail " class="redessociales__imagenes" loading="lazy"></a>
+          </li>
           <li><a href="https://msng.link/o/?IMA=ig" target="_blank"> <img src="./assets/instagram.png"
                 alt="logo instagram" class="redessociales__imagenes" loading="lazy"> </a></li>
           <li><a href="https://www.facebook.com/julian.rius.7" target="_blank"> <img src="./assets/facebook.png"
@@ -147,6 +155,7 @@
     </div>
   </footer>
   <!-- Footer -->
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
   </script>
