--- a/contacto.html
+++ b/contacto.html
@@ -5,13 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Institución médica dedicada a la atención y prevención de la salud en Cardiología, Cirugía, Endocrinología, Ginecología, Nutrición y Psicología">
-  <meta name="keywords" content="Salud, Medicina, Consultorio, Cardiología, Ginecología, Endocrinología, Psicología, Nutrición, Cirugía">
+  <meta name="description"content="Institución médica dedicada a la atención y prevención de la salud en Cardiología, Cirugía, Endocrinología, Ginecología, Nutrición y Psicología">
+  <meta name="keywords"content="Salud, Medicina, Consultorio, Cardiología, Ginecología, Endocrinología, Psicología, Nutrición, Cirugía">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="scss/estilos.css">
-  <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cabin+Condensed&family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap"rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <link rel="shortcut icon" href="./assets/Logo- sin fondo-IMA-01.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -26,8 +25,10 @@
       <div class="row">
         <nav class="header__nav navbar navbar-expand-lg navbar-light bg-transparent ">
           <div class="container-fluid">
-            <img src="./assets/Logo- sin fondo-IMA-01.png" alt="logoima" loading="lazy"
-              class="header__nav__logo d-inline-block align-text-top">
+            <a class="navbar-brand" href="index.html">
+              <img src="./assets/logoheader.png" alt="logoima" loading="lazy"
+                class="header__nav__logo d-inline-block align-text-top">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -65,27 +66,41 @@
     </div>
   </header>
   <!--inicio del cuerpo principal-->
-  <main class="container-fluid">
-    <section class="contacto">
+  <main>
+    <section class="contacto container-fluid">
       <form class=" contacto__formulario animate__animated animate__rotateInDownRight animate__slower	3s"
-        action="https//ima.com/contacto.php" method="get">
-        <label for="Nombre">NOMBRE Y APELLIDO</label>
-        <br>
-        <input type="text" id="NOMBRE Y APELLIDO" placeholder="Ingresa tu nombre">
-        <br>
-        <label for="Email">EMAIL</label>
-        <br>
-        <input type="mail" id="EMAIL DE CONTACTO" placeholder="ingresa@mail.com">
-        <br>
-        <label for="tel">TELÉFONO</label>
-        <br>
-        <input type="num" id="TELEFONO">
-        <br>
-        <label for="Mensaje">INGRESE SU COMENTARIO</label>
-        <br>
-        <textarea name="" id="TEXTBOX" cols="30" rows="10"></textarea>
-        <br>
-        <input class="contacto__formulario--boton" type="button" type="submit" value="ENVIAR">
+        action="index.html" method="post">
+        <div class="row">
+          <div class="col-xs-12 col-sm-6 col-md-6 col-l6">
+            <label for="Nombre">NOMBRE Y APELLIDO</label>
+            <br>
+            <input type="text" id="NOMBRE Y APELLIDO" placeholder="Ingresa tu nombre" required>
+            <br>
+            <label for="Email">EMAIL</label>
+            <br>
+            <input type="mail" id="EMAIL DE CONTACTO" placeholder="ingresa@mail.com" required>
+            <br>
+            <label for="tel">TELÉFONO</label>
+            <br>
+            <input type="num" id="TELEFONO" placeholder="Ingrese tu teléfono" required>
+            <br>
+            <label for="Mensaje">INGRESE SU COMENTARIO</label>
+            <br>
+            <textarea name="Mensaje" id="TEXTBOX" placeholder="Ingresa tu comentario" required></textarea>
+            <br>
+            <a href="index.html">
+              <input class="contacto__formulario--boton" type="button" type="submit" value="ENVIAR">
+            </a>
+          </div>
+          <div class="col-xs-12 col-sm-6 col-md-6 col-l6">
+            <h2 id="contacto__formulario--texto">A la brevedad nos contactaremos con Ud.
+              <br>
+              Muchas gracias por confiar en nosotros y no olvide visitar las novedades semanales de nuestro sitio web <a
+                href="/tipss.html">www.IMAsalud.com.ar</a></h2>
+            <img class="contacto__formulario--img" src="./assets/administración consultorio-1.png" alt="administración"
+              loading="lazy">
+          </div>
+        </div>
       </form>
     </section>
   </main>
@@ -104,18 +119,20 @@
         <h6 class="text-uppercase fw-bold mb-4 mr-xl-6">
           Contacto
         </h6>
-        <p> Calle 20 N°Colón (Bs.As)</p>
-        <p>Horario:L A V 08:00 a 20:00</p>
+        <p> Calle 20 N° 605 - Colón (Bs.As)</p>
+        <p>Horario:L A V 9 a 12hs - 16 a 20hs</p>
+        <p>TURNOS:2473430185</p>
         <p>institutomedicoasistencial@gmail.com</p>
-        <p>TURNOS:2473409030</p>
       </div>
       <!--redes sociales-->
       <div class="row">
         <ul class="redessociales">
-          <li><a href=https://api.whatsapp.com/send?phone=542473409030" target="_blank"> <img
-                src="./assets/logowhatsapp.png" alt="logo de whatsapp" class="redessociales__imagenes" loading="lazy"></a></li>
+          <li><a href=https://api.whatsapp.com/send?phone=542473409030&text=Hola,%20¿En%20qué%20podemos%20ayudarlo?
+              target="_blank"> <img src="./assets/logowhatsapp.png" alt="logo de whatsapp"
+                class="redessociales__imagenes" loading="lazy"></a></li>
           <li><a href="mailto:institutomedicoasistencial@gmail.com" target="_blank"> <img
-                src="./assets/envelopemail.png" alt="logo mail " class="redessociales__imagenes" loading="lazy"></a></li>
+                src="./assets/envelopemail.png" alt="logo mail " class="redessociales__imagenes" loading="lazy"></a>
+          </li>
           <li><a href="https://msng.link/o/?IMA=ig" target="_blank"> <img src="./assets/instagram.png"
                 alt="logo instagram" class="redessociales__imagenes" loading="lazy"> </a></li>
           <li><a href="https://www.facebook.com/julian.rius.7" target="_blank"> <img src="./assets/facebook.png"
