--- a/especialidades.html
+++ b/especialidades.html
@@ -5,13 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Institución médica dedicada a la atención y prevención de la salud en Cardiología, Cirugía, Endocrinología, Ginecología, Nutrición y Psicología">
-  <meta name="keywords" content="Salud, Medicina, Consultorio, Cardiología, Ginecología, Endocrinología, Psicología, Nutrición, Cirugía">
+  <meta name="description"content="Institución médica dedicada a la atención y prevención de la salud en Cardiología, Cirugía, Endocrinología, Ginecología, Nutrición y Psicología">
+  <meta name="keywords"content="Salud, Medicina, Consultorio, Cardiología, Ginecología, Endocrinología, Psicología, Nutrición, Cirugía">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="scss/estilos.css">
-  <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cabin+Condensed&family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap"rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <link rel="shortcut icon" href="./assets/Logo- sin fondo-IMA-01.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -26,8 +25,10 @@
       <div class="row">
         <nav class="header__nav navbar navbar-expand-lg navbar-light bg-transparent ">
           <div class="container-fluid">
-            <img src="./assets/Logo- sin fondo-IMA-01.png" alt="logoima" loading="lazy"
-              class="header__nav__logo d-inline-block align-text-top">
+            <a class="navbar-brand" href="index.html">
+              <img src="./assets/logoheader.png" alt="logoima" loading="lazy"
+                class="header__nav__logo d-inline-block align-text-top">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -58,8 +59,8 @@
       </div>
       <!--encabezado del header-->
       <div class="row text-center">
-        <h1 id="header__h1" class="animate__animated animate__slideInLeft animate__delay-0.75s">"Conozca nuestras
-          especialidades"</h1>
+        <h1 id="header__h1" class="animate__animated animate__slideInLeft animate__delay-0.75s">Conozca nuestras
+          especialidades</h1>
       </div>
     </div>
     </div>
@@ -69,51 +70,63 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner container-fluid">
         <div class="carousel-item active container-fluid">
-          <img src="./assets/especialidades_cardiologia_clinica.png"
+          <img src="./assets/cardio320.png"
+            srcset="./assets/cardio320.png 320w, ./assets/cardio480.png 480w, ./assets/cardio768.png 768w, ./assets/cardio960.png 960w, ./assets/cardio1024.png 1024w, ./assets/cardio1366.png 1366w, ./assets/cardio1920.png 1920w"
             class="carousel-inner__imagenes--especialidades d-block w-100" alt="cardiología" loading="lazy">
           <div class="carousel-caption d-block container-fluid">
             <h2 id="carousel-inner__encabezado2--especialidades"
-              class="animate__animated animate__slideInLeft animate__delay-0.75s">CARDIOLOGÍA</h2>
+              class="animate__animated animate__slideInLeft animate__delay-0.75s">Controles períódicos, hipertensión y
+              arritmia, MAPA, presurometría, ergometría, Holter, estudios prequirúrgicos</h2>
           </div>
         </div>
         <div class="carousel-item container-fluid">
-          <img src="./assets/especialidades_cirugia_general.png"
+          <img src="./assets/ciru320.png"
+            srcset="./assets/ciru320.png 320w, ./assets/ciru480.png 480w, ./assets/ciru768.png 768w, ./assets/ciru960.png 960w, ./assets/ciru1024.png 1024w, ./assets/ciru1366.png 1366w, ./assets/ciru1920.png 1920w"
             class=" carousel-inner__imagenes--especialidades d-block w-100" alt="cirugia" loading="lazy">
           <div class="carousel-caption d-block container-fluid">
             <h2 id="carousel-inner__encabezado2--especialidades"
-              class="animate__animated animate__slideInLeft animate__delay-0.75s">CIRUGÍA</h2>
+              class="animate__animated animate__slideInLeft animate__delay-0.75s">Cirugía clínica, estética y general
+            </h2>
           </div>
         </div>
         <div class="carousel-item container-fluid">
-          <img src="./assets/especialidades_endocrinologia.png"
+          <img src="./assets/endo320.png"
+            srcset="./assets/endo320.png 320w, ./assets/endo480.png 480w, ./assets/endo768 .png 768w, ./assets/endo960.png 960w, ./assets/endo1024.png 1024w, ./assets/endo1366.png 1366w, ./assets/endo1920.png 1920w,"
             class="carousel-inner__imagenes--especialidades d-block w-100" alt="endocrinología" loading="lazy">
           <div class="carousel-caption d-block container-fluid">
             <h2 id="carousel-inner__encabezado2--especialidades"
-              class="animate__animated animate__slideInLeft animate__delay-0.75s">ENDOCRINOLOGÍA</h2>
+              class="animate__animated animate__slideInLeft animate__delay-0.75s">Diabetología, tratamiento y control de
+              tiroides y Osteoporosis</h2>
           </div>
         </div>
         <div class="carousel-item container-fluid">
-          <img src="./assets/especialidades_ginecologia.png"
-            class="carousel-inner__imagenes--especialidades d-block w-100" alt="ginecologia"loading="lazy">
+          <img src="./assets/gineco320.png"
+            srcset="./assets/gineco320.png 320w, ./assets/gineco480.png 480w, ./assets/gineco768.png 768w, ./assets/gineco960.png 960w, ./assets/gineco1024.png 1024w, ./assets/gineco1366.png 1366w, ./assets/gineco1920.png 1920w"
+            class="carousel-inner__imagenes--especialidades d-block w-100" alt="ginecologia" loading="lazy">
           <div class="carousel-caption d-block container-fluid">
             <h2 id="carousel-inner__encabezado2--especialidades"
-              class=" animate__animated animate__slideInLeft animate__delay-0.75s">GINECOLOGÍA</h2>
+              class=" animate__animated animate__slideInLeft animate__delay-0.75s">Controles períodicos, colposcopía,
+              tratamiento de ITS y asesoramiento en métodos anticonceptivos</h2>
           </div>
         </div>
         <div class="carousel-item container-fluid">
-          <img src="./assets/especialidades_nutricion.png "
-            class="carousel-inner__imagenes--especialidades d-block w-100" alt="nutricion" loading="lazy">
+          <img src="./assets/nutri320.png"
+            srcset="./assets/nutri320.png 320w, ./assets/nutri480.png 480w, ./assets/nutri768.png 768w, ./assets/nutri960.png 960w, ./assets/gineco1024.png 1024w, ./assets/nutri1366.png 1366w, ./assets/nutri1920.png 1920w "
+            class="carousel-inner__imagenes--especialidades d-block w-100" alt="ginecologia" loading="lazy">
           <div class="carousel-caption d-block container-fluid">
             <h2 id="carousel-inner__encabezado2--especialidades"
-              class="animate__animated animate__slideInLeft animate__delay-0.75s">NUTRICIÓN</h2>
+              class="animate__animated animate__slideInLeft animate__delay-0.75s">Planes de alimentación personalizados,
+              educación alimentaria-nutricional y nutrición deportiva</h2>
           </div>
         </div>
         <div class="carousel-item container-fluid">
-          <img src="./assets/especialidades_psicologia.png"
+          <img src="./assets/psico320.png"
+            srcset="./assets/psico320.png 320w, ./assets/psico480.png 480w, ./assets/psico768.png 768w, ./assets/psico960.png 960w, ./assets/psico1024.png 1024w, ./assets/pisco1366.png 1366w, ./assets/psico1920.png 1920w"
             class="carousel-inner__imagenes--especialidades d-block w-100" alt="psicologia">
           <div class="carousel-caption d-block container-fluid">
             <h2 id="carousel-inner__encabezado2--especialidades"
-              class=" animate__animated animate__slideInLeft animate__delay-0.75s">PSICOLOGÍA</h2>
+              class=" animate__animated animate__slideInLeft animate__delay-0.75s">Psicología para todas las edades,
+              psiconanálisis y terapia cognitiva y conductual</h2>
           </div>
         </div>
       </div>
@@ -144,24 +157,26 @@
         <h6 class="text-uppercase fw-bold mb-4 mr-xl-6">
           Contacto
         </h6>
-        <p> Calle 20 N°Colón (Bs.As)</p>
-        <p>Horario:L A V 08:00 a 20:00</p>
+        <p> Calle 20 N° 605 - Colón (Bs.As)</p>
+        <p>Horario:L A V 9 a 12hs - 16 a 20hs</p>
+        <p>TURNOS:2473430185</p>
         <p>institutomedicoasistencial@gmail.com</p>
-        <p>TURNOS:2473409030</p>
       </div>
       <!--redes sociales-->
       <div class="row">
         <ul class="redessociales">
-          <li><a href=https://api.whatsapp.com/send?phone=542473409030" target="_blank"> <img
-                src="./assets/logowhatsapp.png" alt="logo de whatsapp" class="redessociales__imagenes" loading="lazy"></a></li>
+          <li><a href=https://api.whatsapp.com/send?phone=542473409030&text=Hola,%20¿En%20qué%20podemos%20ayudarlo?
+              target="_blank"> <img src="./assets/logowhatsapp.png" alt="logo de whatsapp"
+                class="redessociales__imagenes" loading="lazy"></a></li>
           <li><a href="mailto:institutomedicoasistencial@gmail.com" target="_blank"> <img
-                src="./assets/envelopemail.png" alt="logo mail " class="redessociales__imagenes" loading="lazy"></a></li>
+                src="./assets/envelopemail.png" alt="logo mail " class="redessociales__imagenes" loading="lazy"></a>
+          </li>
           <li><a href="https://msng.link/o/?IMA=ig" target="_blank"> <img src="./assets/instagram.png"
                 alt="logo instagram" class="redessociales__imagenes" loading="lazy"> </a></li>
           <li><a href="https://www.facebook.com/julian.rius.7" target="_blank"> <img src="./assets/facebook.png"
                 alt="logo facebook" class="redessociales__imagenes" loading="lazy"></a></li>
-          <li><a href="https://twitter.com/ima" target="_blank"> <img src="./assets/twitter.png" alt="logo de twiter"loading="lazy"
-                class="redessociales__imagenes"></a></li>
+          <li><a href="https://twitter.com/ima" target="_blank"> <img src="./assets/twitter.png" alt="logo de twiter"
+                loading="lazy" class="redessociales__imagenes"></a></li>
         </ul>
       </div>
     </div>
