--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Institución médica dedicada a la atención y prevención de la salud en Cardiología, Cirugía, Endocrinología, Ginecología, Nutrición y Psicología">
+  <meta name="description"content="Institución médica dedicada a la atención y prevención de la salud en Cardiología, Cirugía, Endocrinología, Ginecología, Nutrición y Psicología">
   <meta name="keywords" content="Salud, Medicina, Asistencial, Consultorio, Cardiología, Ginecología, Endocrinología, Psicología, Nutrición, Cirugía">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="scss/estilos.css">
-  <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cabin+Condensed&family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap"rel="stylesheet">
   <link rel="shortcut icon" href="./assets/Logo- sin fondo-IMA-01.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -26,8 +25,10 @@
       <div class="row">
         <nav class="header__nav navbar navbar-expand-lg navbar-light bg-transparent ">
           <div class="container-fluid">
-            <img src="./assets/Logo- sin fondo-IMA-01.png" alt="logoima" loading="lazy"
-              class="header__nav__logo d-inline-block align-text-top">
+            <a class="navbar-brand" href="index.html">
+              <img src="./assets/logoheader.png" alt="logoima" loading="lazy"
+                class="header__nav__logo d-inline-block align-text-top">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -58,8 +59,8 @@
       </div>
       <!--encabezado del header-->
       <div class="row text-center">
-        <h1 id="header__h1" class="animate__animated animate__slideInLeft animate__delay-0.75s">"Más de 30 años al
-          servicio de la comunidad"</h1>
+        <h1 id="header__h1" class="animate__animated animate__slideInLeft animate__delay-0.75s">Más de 20 años al
+          servicio de la comunidad</h1>
       </div>
     </div>
     </div>
@@ -67,26 +68,27 @@
   <!--inicio del cuerpo prinicipal-->
   <main class="container-fluid">
     <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-      <div class="carousel-inner container-fluid">
+      <div class="carousel-inner">
         <div class="carousel-item active container-fluid" data-bs-interval="2000">
-          <img src="./assets/Logo- sin fondo-IMA-01.png" class="carousel-inner__imagenes d-block w-100" alt="logo" loading="lazy">
-          <div class="carousel-caption d-block">
-          </div>
-        </div>
-        <div class="carousel-item container-fluid" data-bs-interval="3000">
-          <img src="./assets/administración consultorio-1.png" class="carousel-inner__imagenes d-block w-100" loading="lazy"
-            alt="consultorio">
+          <img src="./assets/logo320.png"
+            srcset="./assets/logo320.png 320w, ./assets/logo480.png 480w, ./assets/logo768.png 768w, ./assets/logo968.png 960w, ./assets/logo1024.png 1024, ./assets/logo1366.png 1366w, ./assets/logo1920.png 1920w"
+            class="carousel-inner__imagenes d-block w-100" alt="logo" loading="lazy">
           <div class="carousel-caption d-block">
             <h2 id="carousel-inner__encabezado"
               class="row justify-content-center align-item-center animate__animated animate__slideInLeft animate__delay-0.75s">
               ¿Quiénes somos?</h2>
-            <p class="carousel-inner__texto "> Somos un grupo de profesionales comprometidos con el bienestar de la
-              salud, enfocados en la atención y prevención de la salud de nuestros pacientes, adoptando las mejores
-              prácticas y técnicas sanitarias. Garantizando una prestanción de la más alta calidad</p>
+            <p class="carousel-inner__texto "> Somos un equipo interdisciplinario de profesionales de la salud
+              comprometidos con el bienestar bio-psico-social de la comunidad enfoncados en la promoción de la salud y
+              prevención y atención de las enfermedades.
+              Nos capacitamos constantemente para adoptar las mejores prácticas y técnicas sanitarias, garantizando un
+              servicio de la más alta calidad.
+            </p>
           </div>
         </div>
-        <div class="carousel-item container-fluid " data-bs-interval="2000">
-          <img src="./assets/frente consultorio.jpg" class="d-block w-100 carousel-inner__imagenes" alt="frente de ima" loading="lazy">
+        <div class="carousel-item container-fluid" data-bs-interval="3000">
+          <img src="./assets/imaindex320.png"
+            srcset="./assets/imaindex320.png 320w, ./assets/imaindex480.png 480w, ./assets/imaindex768.png 768w, ./assets/imaindex968.png 960w, ./assets/imaindex1024.png 1024, ./assets/imaindex1366.png 1366w, ./assets/imaindex1920.png 1920w"
+            class="carousel-inner__imagenes d-block w-100" loading="lazy" alt="bienvenida">
           <div class="carousel-caption d-block">
             <h2 id="carousel-inner__encabezado2" class="row justify-content-center align-item-center"> Visítenos</h2>
             <p class="carousel-inner__texto2"> Lo invitamos a conocer nuestras instalaciones, y recuerde que su consulta
@@ -111,18 +113,20 @@
         <h6 class="text-uppercase fw-bold mb-4 mr-xl-6">
           Contacto
         </h6>
-        <p> Calle 20 N°Colón (Bs.As)</p>
-        <p>Horario:L A V 08:00 a 20:00</p>
+        <p> Calle 20 N° 605 - Colón (Bs.As)</p>
+        <p>Horario:L A V 9 a 12hs - 16 a 20hs</p>
+        <p>TURNOS:2473430185</p>
         <p>institutomedicoasistencial@gmail.com</p>
-        <p>TURNOS:2473409030</p>
       </div>
       <!--redes sociales-->
       <div class="row">
         <ul class="redessociales">
-          <li><a href=https://api.whatsapp.com/send?phone=542473409030" target="_blank"> <img
-                src="./assets/logowhatsapp.png"   alt="logo de whatsapp" class="redessociales__imagenes" loading="lazy"></a></li>
+          <li><a href=https://api.whatsapp.com/send?phone=542473409030&text=Hola,%20¿En%20qué%20podemos%20ayudarlo?
+              target="_blank"> <img src="./assets/logowhatsapp.png" alt="logo de whatsapp"
+                class="redessociales__imagenes" loading="lazy"></a></li>
           <li><a href="mailto:institutomedicoasistencial@gmail.com" target="_blank"> <img
-                src="./assets/envelopemail.png" alt="logo mail " class="redessociales__imagenes" loading="lazy"></a></li>
+                src="./assets/envelopemail.png" alt="logo mail " class="redessociales__imagenes" loading="lazy"></a>
+          </li>
           <li><a href="https://msng.link/o/?IMA=ig" target="_blank"> <img src="./assets/instagram.png"
                 alt="logo instagram" class="redessociales__imagenes" loading="lazy"> </a></li>
           <li><a href="https://www.facebook.com/julian.rius.7" target="_blank"> <img src="./assets/facebook.png"
