--- a/staff.html
+++ b/staff.html
@@ -6,12 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Institución médica dedicada a la atención y prevención de la salud en Cardiología, Cirugía, Endocrinología, Ginecología, Nutrición y Psicología">
-  <meta name="keywords" content="Salud, Medicina, Consultorio, Cardiología, Ginecología, Endocrinología, Psicología, Nutrición, Cirugía">
+  <meta name="keywords"content="Salud, Medicina, Consultorio, Cardiología, Ginecología, Endocrinología, Psicología, Nutrición, Cirugía">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="stylesheet" href="scss/estilos.css">
-  <link href="https://fonts.googleapis.com/css2?family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Cabin+Condensed&family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap"rel="stylesheet">
   <link rel="shortcut icon" href="./assets/Logo- sin fondo-IMA-01.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -26,8 +25,10 @@
       <div class="row">
         <nav class="header__nav navbar navbar-expand-lg navbar-light bg-transparent ">
           <div class="container-fluid">
-            <img src="./assets/Logo- sin fondo-IMA-01.png" alt="logoima" loading="lazy"
-              class="header__nav__logo d-inline-block align-text-top">
+            <a class="navbar-brand" href="index.html">
+              <img src="./assets/logoheader.png" alt="logoima" loading="lazy"
+                class="header__nav__logo d-inline-block align-text-top">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
               aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -66,7 +67,7 @@
   </header>
   <!--inicio del cuerpo prinicipal-->
   <main class="container-fluid">
-    <div class="row row-cols-2 row-cols-md-3 row-cols-sm-2 g-8">
+    <div class="row row-cols-2 row-cols-md-3 row-cols-sm-3 g-6">
       <div class="col">
         <div class="card">
           <img src="./assets/CARDIOGIRL.png" class="card-img-top" alt="cardiolga" loading="lazy">
@@ -78,55 +79,46 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="./assets/CARDIOBOY.png" class="card-img-top" alt="cardiologo" loading="lazy">
+          <img src="./assets/CIRUJANO.png" class="card-img-top" alt="cardiologo" loading="lazy">
           <div class="card-body">
-            <h5 class="card-title">Dr. Juan Carlos Biancotti</h5>
-            <p class="card-text ">CARDIOLOGIA</p>
+            <h5 class="card-title">Dr. Rodolfo Carrillo</h5>
+            <p class="card-text ">CÍRUGIA</p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card">
-          <img src="./assets/CIRUJANO.png" class="card-img-top" alt="cirujano" loading="lazy">
-          <div class="card-body">
-            <h5 class="card-title">Dr.Rodolfo Carrillo</h5>
-            <p class="card-text">CIRUGÍA</p>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div class="card">
-          <img src="./assets/ENDOCRINOLOGIA.png" class="card-img-top" alt="endrocrinologa" loading="lazy">
+          <img src="./assets/ENDOCRINOLOGIA.png" class="card-img-top" alt="cirujano" loading="lazy">
           <div class="card-body">
             <h5 class="card-title">Dra. Lea Juarez Allen</h5>
-            <p class="card-text"> ENDOCRINOLOGÍA</p>
+            <p class="card-text">ENDOCRINOLOGÍA</p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card">
-          <img src="./assets/GINECO.png" class="card-img-top" alt="ginecologa">
+          <img src="./assets/GINECO.png" class="card-img-top" alt="endrocrinologa" loading="lazy">
           <div class="card-body">
             <h5 class="card-title">Dra. Guillermina Barletta</h5>
-            <p class="card-text"> GINECOLOGÍA</p>
+            <p class="card-text">GINECOLOGÍA</p>
           </div>
         </div>
       </div>
       <div class="col">
         <div class="card">
-          <img src="./assets/nutricion.png" class="card-img-top" alt="nutricion" loading="lazy">
+          <img src="./assets/nutricion.png" class="card-img-top" alt="ginecologa">
           <div class="card-body">
             <h5 class="card-title">Lic. Cintya Rocha</h5>
             <p class="card-text">NUTRICIÓN</p>
           </div>
         </div>
-        <div class="col">
-          <div class="card">
-            <img src="./assets/PSICOL.png" class="card-img-top" alt="psicología" loading="lazy">
-            <div class="card-body">
-              <h5 class="card-title">Lic. Eugenia Biancotti</h5>
-              <p class="card-text">PSICOLOGÍA</p>
-            </div>
+      </div>
+      <div class="col">
+        <div class="card">
+          <img src="./assets/PSICOL.png" class="card-img-top" alt="nutricion" loading="lazy">
+          <div class="card-body">
+            <h5 class="card-title">Ps. Eugenia Biancotti</h5>
+            <p class="card-text">PSICOLOGÍA</p>
           </div>
         </div>
       </div>
@@ -146,22 +138,24 @@
         <h6 class="text-uppercase fw-bold mb-4 mr-xl-6">
           Contacto
         </h6>
-        <p> Calle 20 N°Colón (Bs.As)</p>
-        <p>Horario:L A V 08:00 a 20:00</p>
+        <p> Calle 20 N° 605 - Colón (Bs.As)</p>
+        <p>Horario:L A V 9 a 12hs - 16 a 20hs</p>
+        <p>TURNOS:2473430185</p>
         <p>institutomedicoasistencial@gmail.com</p>
-        <p>TURNOS:2473409030</p>
       </div>
       <!--redes sociales-->
       <div class="row">
         <ul class="redessociales">
-          <li><a href=https://api.whatsapp.com/send?phone=542473409030" target="_blank"> <img
-                src="./assets/logowhatsapp.png" alt="logo de whatsapp" class="redessociales__imagenes" loading="lazy"></a></li>
+          <li><a href=https://api.whatsapp.com/send?phone=542473409030&text=Hola,%20¿En%20qué%20podemos%20ayudarlo?
+              target="_blank"> <img src="./assets/logowhatsapp.png" alt="logo de whatsapp"
+                class="redessociales__imagenes" loading="lazy"></a></li>
           <li><a href="mailto:institutomedicoasistencial@gmail.com" target="_blank"> <img
-                src="./assets/envelopemail.png" alt="logo mail " class="redessociales__imagenes"loading="lazy"></a></li>
+                src="./assets/envelopemail.png" alt="logo mail " class="redessociales__imagenes" loading="lazy"></a>
+          </li>
           <li><a href="https://msng.link/o/?IMA=ig" target="_blank"> <img src="./assets/instagram.png"
                 alt="logo instagram" class="redessociales__imagenes" loading="lazy"> </a></li>
           <li><a href="https://www.facebook.com/julian.rius.7" target="_blank"> <img src="./assets/facebook.png"
-                alt="logo facebook" class="redessociales__imagenes"loading="lazy"></a></li>
+                alt="logo facebook" class="redessociales__imagenes" loading="lazy"></a></li>
           <li><a href="https://twitter.com/ima" target="_blank"> <img src="./assets/twitter.png" alt="logo de twiter"
                 class="redessociales__imagenes" loading="lazy"></a></li>
         </ul>
