--- a/contacto.html
+++ b/contacto.html
@@ -96,7 +96,7 @@
             <h2 id="contacto__formulario--texto">A la brevedad nos contactaremos con Ud.
               <br>
               Muchas gracias por confiar en nosotros y no olvide visitar las novedades semanales de nuestro sitio web <a
-                href="/tipss.html">www.IMAsalud.com.ar</a></h2>
+                href="tipss.html">www.IMAsalud.com.ar</a></h2>
             <img class="contacto__formulario--img" src="./assets/administración consultorio-1.png" alt="administración"
               loading="lazy">
           </div>
