--- a/especialidades.html
+++ b/especialidades.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="scss/estilos.css">
   <link href="https://fonts.googleapis.com/css2?family=Cabin+Condensed&family=Merienda:wght@700&family=Ubuntu:wght@300&display=swap"rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-  <link rel="shortcut icon" href="./assets/Logo- sin fondo-IMA-01.png">
+  <link rel="shortcut icon" href="./assets/logoheader.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <title>IMA Especialidades Médicas</title>
