--- a/especialidades.html
+++ b/especialidades.html
@@ -91,7 +91,7 @@
         </div>
         <div class="carousel-item container-fluid">
           <img src="./assets/endo320.png"
-            srcset="./assets/endo320.png 320w, ./assets/endo480.png 480w, ./assets/endo768 .png 768w, ./assets/endo960.png 960w, ./assets/endo1024.png 1024w, ./assets/endo1366.png 1366w, ./assets/endo1920.png 1920w,"
+            srcset="./assets/endo320.png 320w, ./assets/endo480.png 480w, ./assets/endo768 .png 768w, ./assets/endo960.png 960w, ./assets/endo1024.png 1024w, ./assets/endo1366.png 1366w, ./assets/endo1920.png 1920w"
             class="carousel-inner__imagenes--especialidades d-block w-100" alt="endocrinología" loading="lazy">
           <div class="carousel-caption d-block container-fluid">
             <h2 id="carousel-inner__encabezado2--especialidades"
